Fix the image of the second row - it looks distorted vertically.

--- a/html/template/default/assets/css/style.css
+++ b/html/template/default/assets/css/style.css
@@ -8512,7 +8512,6 @@ Styleguide 22.1
   }
 
   .ec-eyecatchRole .ec-eyecatchRole__image{
-    width: 45%;
     -ms-flex-order: 2;
         order: 2;
   }
